--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -116,6 +116,13 @@
     justify-content: center;
     z-index: 1; 
 } 
+@media only screen and (max-width: 800px) {
+    .title{
+        padding-left:5%;
+        padding-right:5%;
+    }  
+}
+
  
 .subtitle {
     font-family: var(--title-font);
@@ -132,6 +139,12 @@
 
     /* border:1px solid black; */
 }
+@media only screen and (max-width: 800px) {
+    .subtitle { 
+        width: 90%;
+        padding-left:5%;
+    }
+  } 
 
  .description{
     font-family: var(--body-font);
@@ -141,7 +154,7 @@
     font-size:  calc(min(2.5vw,15px)); /*78px;40px; */
     /* text-shadow:1px 1px 7px rgba(249, 91, 212, 0.5); */
     /* border: 1px solid black; */
-    max-width: 80%;
+    width: 700px;
     padding-top:30px;
     padding-left:135px;
     padding-right: 100px;
@@ -149,6 +162,12 @@
     justify-content: center; */
     z-index: 1;
 }
+@media only screen and (max-width: 800px) {
+    .description { 
+        width: 90%;
+        padding-left:5%;
+    }
+  } 
 
  a{
     text-decoration:none;
@@ -162,22 +181,16 @@
     border-top:1px solid var(--first-color);
 } 
 
-  /* For width smaller than 400px: */
- .page .portrait {
+.page .portrait {
     padding-top:50px;
     padding-left:135px;
     padding-bottom: 100px;
-    max-width: 80%;
-  } 
-  
-  /* For width 400px and larger: */
-   @media only screen and (min-width: 400px) {
+    width: 700px;
+} 
+@media only screen and (max-width: 800px) {
     .page .portrait { 
-        width: 700px;
-    }
-    .page .description{
-        width: 700px;
-        
+        width: 90%;
+        padding-left:5%;
     }
   } 
  
@@ -193,13 +206,20 @@
     height:20px; 
     display:flex;
     align-items:flex-end;
-} 
+}
+@media only screen and (max-width: 800px) {
+    .project-category{
+        padding-left:15px;
+        padding-right:15px;
+    }  
+}  
 
 .container{
     /* width:100vw; */
     /* height:100vh; */
-    margin: 0px 135px;  
-    width: calc(100vw - 270px);
+    padding-left:135px;  
+    padding-right: 135px; 
+    width: 100%;
     box-sizing: border-box;
     display:flex;
     flex-direction:column;
@@ -207,13 +227,25 @@
     justify-content:center;
     /* background-color: var(--first-color); */
 }
+@media only screen and (max-width: 800px) {
+    .container{
+        padding-left: 15px;
+        padding-right: 15px;
+        
+    }  
+}  
 
 .inner-container{
-    width:calc(100vw - 270px);
+    width:calc(100vw - 270px); 
     overflow-x:scroll; 
     scroll-behavior:smooth;
     transition: scroll-left 0.2s ease;
 }
+@media only screen and (max-width: 800px) {
+    .inner-container{
+        width:calc(100vw - 40px);
+    }  
+} 
 
 /* For WebKit browsers (Chrome, Safari) */
 .inner-container::-webkit-scrollbar { 
@@ -224,8 +256,13 @@
 .content-box{
     width:2000px;
     display:flex;
-    align-items:center;
+    align-items:flex-start;
     gap:20px;
+}
+@media only screen and (max-width: 800px) {
+    .content-box{
+        width:1500px;
+    }  
 }
 
 .card{
@@ -257,6 +294,11 @@
 } 
  .project-media:hover {
     transform: scale(1.02); /* Scale up slightly on hover */
+}
+@media only screen and (max-width: 800px) {
+    .project-media{
+        height:270px;
+    }  
 }
 
 
@@ -300,7 +342,7 @@
     padding-top:100px;
      /* padding-left:135px; */
     padding-bottom:20px;
-    width:calc(min(80%,700px));
+    width:calc(min(90%,700px));
     display:flex;
     justify-content:flex-start;
     z-index: 1; 
@@ -316,7 +358,7 @@
    padding-top:30px;
     z-index: 1;  
     /* height:20px;  */
-    width:calc(min(80%,700px));
+    width:calc(min(90%,700px));
     display:flex;
     justify-content:flex-start;
 
@@ -331,7 +373,7 @@
     font-size:  calc(min(2.5vw,15px)); /*78px;40px; */
     /* text-shadow:1px 1px 7px rgba(249, 91, 212, 0.5); */
     /* border: 1px solid black; */
-    width:calc(min(80%,700px));
+    width:calc(min(90%,700px));
     padding-top:30px;
     z-index: 1;
 }
@@ -347,7 +389,7 @@
     /* border: 2px solid rgb(255,139,182); */
     /* background-color:rgb(255,139,182); */
     border-radius: 15px;
-    width:calc(min(80%,700px));
+    width:calc(min(90%,700px));
     margin-top:10px;
     margin-bottom:10px;
     padding-bottom:10px;
@@ -363,7 +405,7 @@
   /* For width smaller than 400px: */
   .project-photo1 {
     /* padding-left:135px; */
-    width:calc(min(80%,700px));
+    width:calc(min(90%,700px));
   } 
   .project-allphotos{
     width:100%;
@@ -374,7 +416,7 @@
 
   .project-photogrid{
     /* margin-left:135px; */
-    width:calc(min(80%,700px));
+    width:calc(min(90%,700px));
     display:grid;
     grid-template-columns:48% 48%;
     grid-template-rows: auto;
