--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,20 +1,21 @@
 header{
     position:fixed;
     top:0;
-    left:0;
+    right:0;
     width:100%;
     height:55px;
     z-index:1000;
     display: flex;
+    flex-direction: row-reverse; 
     justify-content:space-between; /*indiv row horizontal*/
-    align-items:flex-start; /*indiv row vertical*/
+    align-items:center; /*indiv row vertical*/
     align-content:flex-start; /*all rows vertical */
     flex-wrap: wrap;
     /* background-color: #FFC0CB; */
     text-decoration: none;
     
     /* border-bottom:1.4px solid var(--first-color); */
-    font-family: var(--title-font);
+    font-family: var(--body-font);
     color: var(--first-color);
     background-color: var(--bg-color);
     
@@ -31,8 +32,8 @@ header .icon {
     color: var(--first-color);
     /* color:transparent; */
     text-decoration: none;
-    font-size:calc(var(--small-font-size)*1.5);
-    font-weight: 50;
+    font-size:calc(var(--small-font-size)*1.7);
+    font-weight: 300;
     
     /* text-shadow:1px 1px 1px rgba(249, 91, 212, 0.5);  */
     /* filter: drop-shadow(1px 10px 7px rgba(249, 91, 212, 0.775));  */
@@ -50,7 +51,7 @@ header .navbar{
     height: 3.5rem;
     align-items:center; /*vertically in center*/
     gap:50px;
-    font-weight:var(--font-light-bold); 
+    font-weight:300; 
     font-size:var(--small-font-size);
     /* text-shadow:1px 1px 7px rgba(249, 91, 212, 0.5); */
 }
