--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,7 +6,7 @@ header{
     height:55px;
     z-index:1000;
     display: flex;
-    flex-direction: row-reverse; 
+    /* flex-direction: row-reverse;  */
     justify-content:space-between; /*indiv row horizontal*/
     align-items:center; /*indiv row vertical*/
     align-content:flex-start; /*all rows vertical */
