--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,6 @@
 footer{
   height: 100px;
+  width: 100vw;
   background-color: var(--first-color);
   color: var(--bg-color);
   display: flex;
@@ -7,6 +8,14 @@ footer{
   justify-content: center;
   align-items: center;
   text-align:center;
+  bottom: 0;
+  position:relative;
+  
+}
+@media (max-width:498px){
+    footer {
+        height: 70px;
+    }  
 }
 
 .footer-title{
