--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -62,7 +62,7 @@
     color: var(--first-color);
     text-align:center;
     font-weight: 800;
-    font-size: calc(max(6vw, 62px));/* 78px;40px; */
+    font-size: calc(max(6vw, 47px));/* 78px;40px; */
     max-width: 90vw;
     padding-left: 30px;
     margin-top: 10vh;
@@ -71,9 +71,17 @@
     /* font-style:italic; */
     
     /* display:flex;
-    justify-content: center; */
-    
+    justify-content: center; */ 
 } 
+@media (max-width:498px){
+    .maintitle{
+        justify-content:center;
+        padding-left:10px;
+        padding-right:10px;
+        height: 50px;
+        margin-top: 15vh;
+    }  
+}
  
 .home .canvas {
     position: absolute;
@@ -95,7 +103,7 @@
 }
 
 .home-video{
-    height:100%;
+    /* height:100%; */
     width:100%;
     object-fit: cover;
     z-index: 1;
@@ -176,6 +184,10 @@
     .title{
         padding-left:5%;
         padding-right:5%;
+        font-size: 40px;
+        padding-top:80px;
+        padding-bottom:0px;
+        /* border: 1px solid blue; */
     }  
 }
 
@@ -201,7 +213,7 @@
         padding-left:5%;
     }
   } 
-
+/* 
  .description{
     font-family: var(--body-font);
     color: var(--first-color);
@@ -210,20 +222,20 @@
     font-size:  calc(min(2.5vw,16px)); /*78px;40px; */
     /* text-shadow:1px 1px 7px rgba(249, 91, 212, 0.5); */
     /* border: 1px solid black; */
-    width: 700px;
+    /* width: 700px;
     padding-top:15px;
     padding-left:135px;
-    padding-right: 100px;
+    padding-right: 100px; */
     /* display:flex;
     justify-content: center; */
-    z-index: 1;
-}
-@media only screen and (max-width: 800px) {
+    /* z-index: 1;
+} */
+/* @media only screen and (max-width: 800px) {
     .description { 
         width: 90%;
         padding-left:5%;
-    }
-  } 
+    } */
+  /* }  */ 
 
 a{
     text-decoration:none;
@@ -233,11 +245,11 @@ a{
 .line{
     width: 100%;
     max-width:100vw;
-    height:10px;
+    height:2px;
     border-top:1px solid var(--first-color);
 } 
 
-.page .portrait {
+/* .page .portrait {
     padding-top:50px;
     padding-left:135px;
     padding-bottom: 100px;
@@ -248,7 +260,7 @@ a{
         width: 90%;
         padding-left:5%;
     }
-  } 
+  }  */
  
   .project-category {
     font-family: var(--title-font);
@@ -267,6 +279,7 @@ a{
     .project-category{
         padding-left:15px;
         padding-right:15px;
+        font-size: 25px;
     }  
 }  
 
@@ -287,7 +300,6 @@ a{
     .container{
         padding-left: 15px;
         padding-right: 15px;
-        
     }  
 }  
 
@@ -361,7 +373,7 @@ a{
 
 /* Show scrollbar on hover in Firefox */
 .inner-container:hover {
-    scrollbar-color: #888 #f1f1f1; /* Show colors on hover */
+    scrollbar-color: var(--first-color) var(--bg-color); /* Show colors on hover */
 }
 
 
@@ -373,7 +385,7 @@ a{
 }
 @media only screen and (max-width: 800px) {
     .content-box{
-        width:1500px;
+        width:1200px;
     }  
 }
 
@@ -404,7 +416,7 @@ a{
 }
 @media only screen and (max-width: 800px) {
     .project-media{
-        height:270px;
+        height: 200px;
     }  
 }
 
@@ -417,6 +429,12 @@ a{
     text-align: left;
     padding-right:10px;
 }
+@media only screen and (max-width: 800px) {
+    .project-title{
+        font-size: 16px;
+    }  
+}
+
 .project-desc{
     font-size:large;
     font-family:var(--body-font);
@@ -440,14 +458,23 @@ a{
     max-width:100vw;
     margin:0;
     box-sizing:border-box;
-    
+    min-height:calc(100vh - 100px);  
 } 
+@media (max-width:498px){
+    .projectpage {
+        min-height: calc(100vh - 70px);
+    }  
+}
+
+.content{
+    flex:1;
+}
 .projecttitle{
     font-family: var(--title-font);
     color: var(--first-color);
     text-align:left;
     font-weight: 50;
-    font-size: calc(min(7vw, 60px));/* 78px;40px; */
+    font-size: calc(min(7vw, 30px));/* 78px;40px; */
     padding-top:100px;
      /* padding-left:135px; */
     padding-bottom:20px;
@@ -456,6 +483,13 @@ a{
     justify-content:flex-start;
     z-index: 1; 
     /* border:1px solid black; */
+}
+@media only screen and (max-width: 600px) {
+    .projecttitle{
+        font-size: 30px;
+        /* padding-top:0px; */
+        padding-bottom:10px;
+    }  
 }
 
 .projectsubtitle {
@@ -473,18 +507,32 @@ a{
 
     /* border:1px solid black; */
 }
+@media only screen and (max-width: 600px) {
+    .projectsubtitle{
+        font-size: 20px;
+        /* padding-top:0px; */
+        padding-bottom:10px;
+    }  
+}
+
 
 .projectdescription{
     font-family: var(--body-font);
     color: var(--first-color);
     text-align:justify;
     font-weight: var(--font-light-bold);
-    font-size:  calc(min(2.5vw,16px)); /*78px;40px; */
+    font-size:  calc(min(2.5vw,18px)); /*78px;40px; */
     /* text-shadow:1px 1px 7px rgba(249, 91, 212, 0.5); */
     /* border: 1px solid black; */
     width:calc(min(90%,700px));
-    padding-top:30px;
+    /* padding-top:30px; */
     z-index: 1;
+}
+@media only screen and (max-width: 600px) {
+    .projectdescription{
+        font-size: 14px;
+        /* padding-top:20px; */
+    }  
 }
 
 .clickhere{
@@ -511,11 +559,13 @@ a{
     height: 100px;
 }
 
-  /* For width smaller than 400px: */
+
   .project-photo1 {
     /* padding-left:135px; */
     width:calc(min(90%,700px));
+    padding-bottom:10px;
   } 
+
   .project-allphotos{
     width:100%;
     height: calc(width*0.5);
