--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -131,6 +131,11 @@
     text-align:left;
     width: 35%;
 }
+@media only screen and (max-width: 600px){
+    .overlay-text1{
+        font-weight: 400;
+    }
+}
 
  .page{
     display:flex;
