--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -170,7 +170,7 @@
     justify-content: flex-start;
     z-index: 1; 
     /* border: 1px solid blue; */
-    width:calc(min(90%,700px));
+    width:calc(min(85%,700px));
 } 
 @media only screen and (max-width: 800px) {
     .abouttitle{
@@ -178,7 +178,19 @@
         padding-right:15px;
         font-size: 45px;
         padding-top:80px;
-        padding-bottom:10px;
+
+        /* border: 1px solid blue; */
+    }  
+}
+@media only screen and (max-width: 600px) {
+    .abouttitle{
+        font-size: 24px;
+        font-weight: 600;
+        padding-bottom: 10px;
+        /* width: 90vw; */
+        /* justify-content: center; */
+        /* text-transform: uppercase; */
+        /* font-family: var(--body-font); */
         /* border: 1px solid blue; */
     }  
 }
@@ -196,15 +208,25 @@
     /* height:20px;  */
     display:flex;
     align-items:flex-end;
-    width:calc(min(90%,700px));
+    width:calc(min(85%,700px));
 
     /* border:1px solid black; */
 }
 @media only screen and (max-width: 800px) {
     .subtitle { 
         padding-left:15;
+        font-size: 25px;
+        font-weight: 400;
     }
   } 
+  @media only screen and (max-width: 600px) {
+    .subtitle { 
+        font-size: 19px;
+        font-weight: 600;
+        padding-left:15;
+    }
+  } 
+
 
 a{
     text-decoration:none;
@@ -242,6 +264,17 @@ a{
         /* border: 1px solid blue; */
     }  
 }
+@media only screen and (max-width: 600px) {
+    .worktitle{
+        font-size: 24px;
+        font-weight: 600;
+        /* width: 90vw; */
+        justify-content: center;
+        /* text-transform: uppercase; */
+        /* font-family: var(--body-font); */
+        /* border: 1px solid blue; */
+    }  
+}
 
   .project-category {
     font-family: var(--title-font);
@@ -263,6 +296,12 @@ a{
         font-size: 25px;
     }  
 }  
+@media only screen and (max-width: 600px) {
+    .project-category{
+        font-size: 19px;
+        font-weight: 300;
+    }  
+} 
 
 .container{
     /* width:100vw; */
@@ -372,7 +411,12 @@ a{
 }
 @media only screen and (max-width: 800px) {
     .project-media{
-        height: 200px;
+        height: 250px;
+    }  
+}
+@media only screen and (max-width: 498px) {
+    .project-media{
+        height: 180px;
     }  
 }
 
@@ -387,15 +431,19 @@ a{
 }
 @media only screen and (max-width: 800px) {
     .project-title{
-        font-size: 16px;
+        font-size: 18px;
+        font-weight: 300;
+
+    }  
+}
+@media only screen and (max-width: 600px) {
+    .project-title{
+        font-size: 15px;
+        font-weight: 400;
+
     }  
 }
 
-.project-desc{
-    font-size:large;
-    font-family:var(--body-font);
-    font-weight:300;
-} 
 
 .projectpage{
     display:flex;
@@ -431,17 +479,32 @@ a{
     padding-top:100px;
      /* padding-left:135px; */
     padding-bottom:20px;
-    width:calc(min(90%,700px));
+    width:calc(min(85%,700px));
     display:flex;
     justify-content:flex-start;
     z-index: 1; 
     /* border:1px solid black; */
 }
+
+@media only screen and (max-width: 800px) {
+    .projecttitle{
+        padding-left:15px;
+        padding-right:15px;
+        font-size: 45px;
+        padding-top:80px;
+        padding-bottom:10px;
+        /* border: 1px solid blue; */
+    }  
+}
 @media only screen and (max-width: 600px) {
     .projecttitle{
-        font-size: 30px;
-        /* padding-top:0px; */
-        padding-bottom:10px;
+        font-size: 24px;
+        font-weight: 600;
+        /* width: 90vw; */
+        /* justify-content: center; */
+        /* text-transform: uppercase; */
+        /* font-family: var(--body-font); */
+        /* border: 1px solid blue; */
     }  
 }
 
@@ -455,19 +518,27 @@ a{
    padding-bottom: 10px;
     z-index: 1;  
     /* height:20px;  */
-    width:calc(min(90%,700px));
+    width:calc(min(85%,700px));
     display:flex;
     justify-content:flex-start;
 
     /* border:1px solid black; */
 }
-@media only screen and (max-width: 600px) {
-    .projectsubtitle{
-        font-size: 20px;
-        /* padding-top:0px; */
-        padding-bottom:10px;
-    }  
-}
+
+@media only screen and (max-width: 800px) {
+    .projectsubtitle { 
+        padding-left:15;
+        font-size: 25px;
+        font-weight: 400;
+    }
+  } 
+  @media only screen and (max-width: 600px) {
+    .projectsubtitle { 
+        font-size: 19px;
+        font-weight: 600;
+        padding-left:15;
+    }
+  } 
 
 
 .projectdescription{
@@ -478,14 +549,22 @@ a{
     font-size:  calc(min(2.5vw,18px)); /*78px;40px; */
     /* text-shadow:1px 1px 7px rgba(249, 91, 212, 0.5); */
     /* border: 1px solid black; */
-    width:calc(min(90%,700px));
+    width:calc(min(85%,700px));
     /* padding-top:30px; */
     z-index: 1;
 }
+@media only screen and (max-width: 800px) {
+    .projectdescription{
+        font-size: 18px;
+        font-weight: 300;
+
+    }  
+}
 @media only screen and (max-width: 600px) {
     .projectdescription{
-        font-size: 14px;
-        /* padding-top:20px; */
+        font-size: 15px;
+        font-weight: 400;
+        text-align: left;
     }  
 }
 
@@ -500,7 +579,7 @@ a{
     /* border: 2px solid rgb(255,139,182); */
     /* background-color:rgb(255,139,182); */
     border-radius: 15px;
-    width:calc(min(90%,700px));
+    width:calc(min(85%,700px));
     margin-top:10px;
     margin-bottom:10px;
     padding-bottom:10px;
@@ -516,7 +595,7 @@ a{
 
   .project-photo1 {
     /* padding-left:135px; */
-    width:calc(min(90%,700px));
+    width:calc(min(85%,700px));
     padding-bottom:10px;
   } 
 
@@ -529,20 +608,27 @@ a{
 
   .project-photogrid{
     /* margin-left:135px; */
-    width:calc(min(90%,700px));
+    width:calc(min(85%,700px));
     display:grid;
     grid-template-columns:48% 48%;
     grid-template-rows: auto;
     gap:4%;
     grid-row-gap: 25px;
     display: grid;
-    /* border:1px solid blue; */
-    
+    /* border:1px solid blue; */ 
+  }
+  @media only screen and (max-width: 600px){
+    .project-photogrid{
+        gap:2%;
+        grid-row-gap: 6px;
+        width:calc(min(85%,700px));
+        grid-template-columns:49% 49%;
+    }
   }
 
   .shader-experiment{
-    width:calc(min(min(90%,700px),90vh));
-    height:calc(min(min(90vw,700px),90vh));
+    width:calc(min(min(85%,700px),90vh));
+    height:calc(min(min(85vw,700px),90vh));
     /* border: 2px solid var(--second-color); */
   }
   .canvas-container {
