--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -402,7 +402,7 @@ a{
     height: 340px; /* Maintain aspect ratio */
    object-fit: cover;
     border-radius: 10px; /* Round corners if needed */
-/*    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+   box-shadow: 0px 1px 5px 2px rgba(0, 86, 110, 0.2);; /* Subtle shadow
    transition: transform 0.2s; /* Smooth hover effect */
   margin-top: 5px;
 } 
