--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -24,8 +24,8 @@ header{
     header{
         height: 70px;
         justify-content:center;
-        border-bottom: 1px solid rgba(0, 86, 110, 0.1);
-        /* box-shadow: 0px 1px 2px rgba(0, 86, 110, 0.1); */
+        /* border-bottom: 1px solid rgba(0, 86, 110, 0.1); */
+        box-shadow: 0px 1px 2px rgba(0, 86, 110, 0.1);
     }
     
 }
