added photo slideshows to project pages

--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -740,7 +740,7 @@ a{
     
 
     background: var(--bg-color);
-    background: #ffffff80;
+    /* background: #ffffff80; */
     display: flex;
     justify-content: center;
     align-items: center;
