--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -81,31 +81,42 @@
         justify-content:center;
         padding-left:10px;
         padding-right:10px;
-        height: 50px;
+        height: 150px;
         margin-top: 15vh;
         font-size: 10.7vw;
     }  
 }
 
  
-.home .canvas {
+/* .home .Canvas {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 20%;
+    background-color: var(--first-color);
+    display:flex;
+    flex-wrap:wrap;
+    font-family: var(--body-font);
+    color: var(--first-color);
+    z-index: 0;
+    border: 2px solid blue;
+    
+} */
+
+.coral-model{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    max-height: 75vh;
     background-color: var(--bg-color);
     display:flex;
     flex-wrap:wrap;
     font-family: var(--body-font);
     color: var(--first-color);
     z-index: 0;
-    
-}
-
-.coral-page{
-    width: 100vw;
-    height:100vh;
+    /* border: 2px solid blue; */
 }
 
 .home-video{
