adjustments to home page for phone to be able to scroll

--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -108,7 +108,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    max-width: 90vw;
     max-height: 75vh;
     background-color: var(--bg-color);
     display:flex;
