adjustments to home page for phone to be able to scroll

--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -116,7 +116,7 @@
     font-family: var(--body-font);
     color: var(--first-color);
     z-index: 0;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
 }
 
 .home-video{
